--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "nodebb-plugin-emoji-one": "1.1.5",
     "nodebb-plugin-markdown": "6.0.2",
     "nodebb-plugin-mentions": "1.1.3",
+    "nodebb-plugin-s3-uploads-updated": "^0.3.11",
     "nodebb-plugin-soundpack-default": "0.1.6",
     "nodebb-plugin-spam-be-gone": "0.4.10",
     "nodebb-rewards-essentials": "0.0.9",
